<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/searchMain"
                android:layout_width="0dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lato"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/foredittextloginregister"
                android:hint="Search Item"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btnSearchMain"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivMain"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_bagitronik_text_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageButton
                android:id="@+id/btnSearchMain"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/toolbar_bg"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_almost_white"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/lnPerangkatKomputer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/spacing_medium"
                                android:layout_weight="1"
                                android:fontFamily="@font/lato"
                                android:textColor="@color/black"
                                android:paddingBottom="8dp"
                                android:text="@string/perangkat_komputer"
                                android:textSize="@dimen/letter_medium"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvSeeAllPerangkatKomputer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/lato"
                                android:layout_marginTop="@dimen/spacing_medium"
                                android:paddingBottom="8dp"
                                android:textColor="@color/dc_gray"
                                android:text="@string/see_all"
                                android:textSize="@dimen/letter_medium" />
                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:paddingBottom="4dp"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_lihatsemua"/>
                        </LinearLayout>

                        <com.facebook.shimmer.ShimmerFrameLayout
                            android:id="@+id/shimmer_container"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:orientation="vertical">

                                <include layout="@layout/recycler_shimmer_bg" />

                            </LinearLayout>

                        </com.facebook.shimmer.ShimmerFrameLayout>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rvPerangkatKomputer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/spacing_medium" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:id="@+id/lnSmartPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lnPerangkatKomputer"
                    android:layout_marginTop="@dimen/spacing_medium">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/spacing_medium"
                                android:layout_weight="1"
                                android:paddingBottom="8dp"
                                android:fontFamily="@font/lato"
                                android:text="@string/telepon_selular"
                                android:textColor="@color/black"
                                android:textSize="@dimen/letter_medium"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvSeeAllSmartPhone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_medium"
                                android:fontFamily="@font/lato"
                                android:paddingBottom="8dp"
                                android:text="@string/see_all"
                                android:textColor="@color/dc_gray"
                                android:textSize="@dimen/letter_medium" />
                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center"
                                android:paddingBottom="4dp"
                                android:src="@drawable/ic_lihatsemua"/>
                        </LinearLayout>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rvSmartPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/lnSmartPhone"
                            android:layout_margin="@dimen/spacing_medium" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/lnCamera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lnSmartPhone"
                    android:layout_marginTop="@dimen/spacing_medium">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/lnSmartPhone"
                            android:layout_marginLeft="8dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/spacing_medium"
                                android:layout_weight="1"
                                android:paddingBottom="8dp"
                                android:fontFamily="@font/lato"
                                android:text="@string/kamera"
                                android:textColor="@color/black"
                                android:textSize="@dimen/letter_medium"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvSeeAllCamera"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_medium"
                                android:fontFamily="@font/lato"
                                android:paddingBottom="8dp"
                                android:text="@string/see_all"
                                android:textColor="@color/dc_gray"
                                android:textSize="@dimen/letter_medium" />

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center"
                                android:paddingBottom="4dp"
                                android:src="@drawable/ic_lihatsemua"/>
                        </LinearLayout>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rvCamera"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/lnCamera"
                            android:layout_margin="@dimen/spacing_medium" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:id="@+id/lnAksesorisElektronik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lnCamera"
                    android:layout_marginTop="@dimen/spacing_medium">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/spacing_medium"
                                android:layout_weight="1"
                                android:fontFamily="@font/lato"
                                android:paddingBottom="8dp"
                                android:text="@string/aksesoris_elektronik"
                                android:textColor="@color/black"
                                android:textSize="@dimen/letter_medium"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvSeeAllAksesorisElektronik"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_medium"
                                android:fontFamily="@font/lato"
                                android:paddingBottom="8dp"
                                android:text="@string/see_all"
                                android:textColor="@color/dc_gray"
                                android:textSize="@dimen/letter_medium" />

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center"
                                android:paddingBottom="4dp"
                                android:src="@drawable/ic_lihatsemua"/>
                        </LinearLayout>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rvAksesorisElektronik"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/spacing_medium" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </RelativeLayout>

        </android.support.v4.widget.NestedScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>